docs/v7.1/properties/P21.md
---
layout: page
title: P21 a eu pour finalité générale (a été la finalité de)
titleEn: P21 had general purpose (was purpose of) - a eu pour finalité générale (a été la finalité de)
permalink: /v7.1/proprietes/P21
sidebar: v71
group: proprietes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Domaine</strong></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><strong>Portée</strong></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><strong>Sous-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Super-propriété de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Quantification</strong></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This property describes an intentional relationship between an instance of E7 Activity and some general goal or purpose, described as an instance of E55 Type. </p>
<p>This may involve activities intended as preparation for some type of activity or event. <em>P21 had general purpose (was purpose of)</em> differs from <em>P20 had specific purpose (was purpose of)</em> in that no occurrence of an event is implied as the purpose.</p>
</td>
<td>
<p>Cette propriété décrit la relation intentionnelle [n.d.t. qu’établit un actant] entre une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> et sa finalité ou son but généraux, décrits par une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code>. </p>
<p>Ceci peut inclure des activités qui ont pour objectif la préparation d’une activité ou d’un évènement quelconque. <code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale (a_été_la_finalité_de)</code> se distingue de <code class="language-plaintext highlighter-rouge">P20_a_eu_pour_finalité_spécifique (a_été_la_finalité_de)</code> du fait que sa finalité n’est pas par défaut l’occurrence d’un évènement.  </p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>Van Eyck’s pigment grinding (E7) <em>had general purpose</em> painting (E55) (Borchert, 2008)</p>
</li>
<li><p>The setting of trap 2742 on May 17<sup>th</sup> 1874 (E7) <em>had general purpose </em>Catching Moose (E55) (Activity type) (fictitious)</p>
</li>
<li><p>The construction of the Berlin Wall starting 13. August 1961 (E12)  <em>had general purpose</em> Preventing Emigration (E55) (History.com Editors, 2020)</p>
</li>
<li><p>The reinforcement of the Mexico-United States barrier between the United States of America and Mexico in Fall 2019 (E11) <em>had general purpose</em> Preventing Immigration (E55)</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le broyage de pigments par Van Eyck (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) le fait de peindre (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Brochert, 2008) </p>
</li>
<li><p>La mise en place de la trappe « 2742 » le 17 mai 1874 (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) d’attraper un orignal (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (fictif)</p>
</li>
<li><p>La construction du mur de Berlin, commencée le 13 août 1961 (<code class="language-plaintext highlighter-rouge">E12_Production</code>), a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) d’empêcher l’émigration (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (History.com Editors, 2020)</p>
</li>
<li><p>Le renforcement de la barrière frontalière entre les États-Unis et le Mexique à l’automne 2019 (<code class="language-plaintext highlighter-rouge">E11_Modification</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) de prévenir l’immigration (<code class="language-plaintext highlighter-rouge">E55_Type</code>) </p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>P21(x,y) ⇒ E7(x)</p>
<p>P21(x,y) ⇒ E55(y)</p>
</td>
<td>
<p>P21(x,y) ⇒ E7(x)</p>
<p>P21(x,y) ⇒ E55(y)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
