docs/v7.1.2/properties/P21.md
---
layout: page
title: P21 a eu pour finalité générale (a été la finalité de)
titleEn: P21 had general purpose (was purpose of) - a eu pour finalité générale (a été la finalité de)
permalink: /v7.1.2/proprietes/P21
sidebar: v712
group: proprietes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Domaine</strong></p></td>
<td class="en">
<p>E7 Activity</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E7_Activité</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Portée</strong></p></td>
<td class="en">
<p>E55 Type</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E55_Type</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Sous-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Super-propriété de</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong>Quantification</strong></p></td>
<td class="en">
<p>many to many (0,n:0,n)</p>
</td>
<td>
<p>plusieurs à plusieurs (0,n:0,n)</p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This property describes an intentional relationship between an instance of E7 Activity and some general goal or purpose, described as an instance of E55 Type. <strong></strong></p>
<p>This may involve activities intended as preparation for some type of activity or event. <em>P21 had general purpose (was purpose of)</em> differs from <em>P20 had specific purpose (was purpose of)</em> in that no occurrence of an event is implied as the purpose.</p>
</td>
<td>
<p>Cette propriété décrit la relation intentionnelle [n.d.t. qu’établit un actant] entre une instance de <code class="language-plaintext highlighter-rouge">E7_Activité</code> et sa finalité ou son but généraux, décrits par une instance de <code class="language-plaintext highlighter-rouge">E55_Type</code>. </p>
<p>Cela peut inclure des activités qui ont pour objectif la préparation d’une activité ou d’un évènement quelconque. <code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale (a_été_la_finalité_de)</code> se distingue de <code class="language-plaintext highlighter-rouge">P20_a_eu_pour_finalité_spécifique (a_été_la_finalité_de)</code> du fait que sa finalité n’est pas par défaut l’occurrence d’un évènement.  </p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>Van Eyck’s pigment grinding (E7) <em>had general purpose</em> painting (E55). (Borchert, 2008)<strong></strong></p>
</li>
<li><p>The setting of trap 2742 on 17th May 1874 (E7) <em>had general purpose </em>catching moose (E55). [Activity type] (fictitious)<strong></strong></p>
</li>
<li><p>The construction of the Berlin Wall starting 13th August 1961 (E12) <em>had general purpose</em> preventing emigration (E55). (History.com Editors, 2020)</p>
</li>
<li><p>The reinforcement of the Mexico-United States barrier between the United States of America and Mexico in Fall 2019 (E11) <em>had general purpose</em> preventing immigration (E55).</p>
</li>
<li><p>The rebuilding of the city walls of Heraklion by the Venetian rulers starting in 1462 (E12) had general purpose preventing conquest by enemy (E55). (YouIngGreece.com, 2020)</p>
</li>
<li><p>The building of the seawall in Hamamatsu, Shizuoka, Japan between 2014 and 2020 (E12) had general purpose preventing inland flooding by tsunami (E55).</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>Le broyage de pigments par Van Eyck (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) le fait de peindre (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (Brochert, 2008) </p>
</li>
<li><p>La mise en place de la trappe « 2742 » le 17 mai 1874 (<code class="language-plaintext highlighter-rouge">E7_Activité</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) d’attraper un orignal (<code class="language-plaintext highlighter-rouge">E55_Type</code>) [type d'activité] (fictif)</p>
</li>
<li><p>La construction du mur de Berlin, commencée le 13 août 1961 (<code class="language-plaintext highlighter-rouge">E12_Production</code>), a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) d’empêcher l’émigration (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (History.com Editors, 2020)</p>
</li>
<li><p>Le renforcement de la barrière frontalière entre les États-Unis et le Mexique à l’automne 2019 (<code class="language-plaintext highlighter-rouge">E11_Modification</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) de prévenir l’immigration (<code class="language-plaintext highlighter-rouge">E55_Type</code>) </p>
</li>
<li><p>La reconstruction des murs de la ville d'Héraklion par les dirigeants vénitiens en 1492 (<code class="language-plaintext highlighter-rouge">E12_Production</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) de prévenir une conquête par des ennemis (<code class="language-plaintext highlighter-rouge">E55_Type</code>) (YouIngGreece.com, 2020)</p>
</li>
<li><p>La construction d'une digue à Hamamatsu, dans la préfecture de Shizuoka au Japon, entre 2014 et 2020 (<code class="language-plaintext highlighter-rouge">E12_Production</code>) a eu pour finalité générale (<code class="language-plaintext highlighter-rouge">P21_a_eu_pour_finalité_générale</code>) de prévenir des inondations à l'intérieur des terres en cas de tsunami (<code class="language-plaintext highlighter-rouge">E55_Type</code>)</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>P21(x,y) ⇒ E7(x)</p>
<p>P21(x,y) ⇒ E55(y)</p>
</td>
<td>
<p>P21(x,y) ⇒ E7(x)</p>
<p>P21(x,y) ⇒ E55(y)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p><em></em></p>
</td>
</tr>
</tbody>
</table>
